--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
             SURVIVE THE COSMOS
         </p>
         <p class="credits">
-            Designed by Kofi Fosu<br>
-            cosmoscoderr@gmail.com
+            Designed by cosmos coderr<br>
         </p>
         <button id="startButton">TAP TO START GAME</button>
     </div>
